# langevin_dynamics

./: .gitignore  CMakeLists.txt  README.md  langevin_out-1039561.out  submit
docs/: BAOAB.md  stability_analysis.md
scripts/: plot.py  run.py
src/: BAOAB.hpp  extraction_helpers.hpp  main.cpp  potentials.hpp  run_simulation.hpp
src/CPU/: BAOAB.hpp  extraction_helpers.hpp  main.cpp  run_simulation.hpp
src/GPU/: cuda_check.hpp  device_buffers.cuh  main.cu  run_simulation.cuh  structs.hpp
src/GPU/host_device/: copy_data.hpp  device_buffer.cuh  structs.hpp
src/GPU/kernels/: extraction.cuh  integration.cuh  pearson.cuh  reduction.cuh  rng.cuh
src/GPU/pilot/: run_pilot.cuh  run_pilot_simulation.cuh
src/GPU/process/: helpers.hpp
src/input/: input.cpp  input.hpp  input.toml
src/io/: netCDF_writer.hpp
tests/: test_convergence.cpp  test_energy.cpp  test_forces.cpp  test_helpers.hpp
tests/CPU/: test_convergence.cpp  test_energy.cpp  test_forces.cpp  test_helpers.hpp
